./ 	PR c++/23337 	* gimplify.c (gimplify_init_ctor_eval): If we see an element of 	vector type, don't try to construct it element by element.  Add an 	assertion that we use a FIELD_DECL when building a COMPONENT_REF. testsuite/ 	PR c++/23337 	* g++.dg/ext/vector2.C: New.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@103177 138bc75d-0d04-0410-961f-82ee72b054a4